--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,7 @@
 		<module>products</module>
 		<module>warehouse</module>
 		<module>renren-fast</module>
+		<module>renren-generator</module>
+		<module>mall-common</module>
 	</modules>
 </project>
