--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
 		<module>renren-fast</module>
 		<module>renren-generator</module>
 		<module>mall-common</module>
+		<module>gateway</module>
 	</modules>
 </project>
