--- a/products/src/main/resources/application.yml
+++ b/products/src/main/resources/application.yml
@@ -4,10 +4,19 @@ spring:
     password: password
     url: jdbc:mysql://127.0.0.1:3306/mall_pms
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 mybatis-plus:
   mapper-locations: classpath*:classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 server:
   port: 10000
+logging:
+  level:
+    com.zyx.mall: debug
