--- a/products/src/main/resources/application.yml
+++ b/products/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    alicloud:
+      access-key: LTAI4G7Xysb2DQDzJunL3jQj
+      secret-key: odimylDuJWMiokJlJCSVlCY0Lni2GE
+      oss:
+        endpoint: oss-cn-beijing.aliyuncs.com
 mybatis-plus:
   mapper-locations: classpath*:classpath*:/mapper/**/*.xml
   global-config:
