change the coupon configurations to nacos center

--- a/coupons/src/main/resources/bootstrap.properties
+++ b/coupons/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=coupons
 
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-#spring.cloud.nacos.config.namespace=bd0883b0-8efa-4f31-9170-1ede52b6afc4
+spring.cloud.nacos.config.namespace=bd0883b0-8efa-4f31-9170-1ede52b6afc4
 spring.cloud.nacos.config.group=prod
 
 spring.cloud.nacos.config.extension-configs[0].data-id=datasource.yml
