--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -122,10 +122,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
-            <version>2.1.1.RELEASE</version>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
         </dependency>
+
     </dependencies>
 
     <dependencyManagement>
