--- a/products/pom.xml
+++ b/products/pom.xml
@@ -51,6 +51,26 @@
 			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+			<version>2.1.1.RELEASE</version>
+		</dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.1.5.Final</version>
+			<scope>compile</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
