set jdbc time to prevent error

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>.*),/$\{segment}
 
-        - id: warehouse
+        - id: warehouse_route
           uri: lb://warehouse
           predicates:
             - Path=/api/warehouse/**
